--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -454,7 +454,22 @@
             </div>
         </div>
         <button class="open-btn" onclick="openEnvelope()">Open Me</button>
-    </div><style>
+    </div>
+
+    <!-- Full Letter View -->
+    <div id="letter-view">
+        <div class="love-letter">
+            <button class="close-btn" onclick="closeLetter()">×</button>
+            <h2>My Dearest Valentine,</h2>
+            <p>Just like you found these hidden hearts, you've found the deepest parts of my soul.</p>
+            <p>Every moment with you is a surprise I cherish, a gift I never want to stop opening.</p>
+            <p>Thank you for being my adventure, my comfort, and my love.</p>
+            <p>Happy Valentine's Day! ❤️</p>
+            <p style="text-align: right;">- Yours forever</p>
+        </div>
+    </div>
+
+    <style>
         /* Additional Styles for Hiding Spots */
         .hiding-spots-container {
             display: flex;
@@ -698,39 +713,8 @@
     </script>
 </body>
 
-</html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>A Special Surprise</title>
-
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-
-<style>
-:root{
---primary-color:#ff4d6d;
---secondary-color:#ff8fa3;
---glass-bg:rgba(255,255,255,0.25);
---glass-border:rgba(255,255,255,0.5);
---text-color:#590d22;
-}
-
-*{margin:0;padding:0;box-sizing:border-box;}
-
-body{
-font-family:'Poppins',sans-serif;
-background:linear-gradient(135deg,#ff9a9e 0%,#fecfef 100%);
-height:100vh;
-overflow:hidden;
-display:flex;
-justify-content:center;
-align-items:center;
-color:var(--text-color);
-}
-
-/* Love Screen */
-#love-screen{
+</html><!-- Next Love Screen -->
+<div id="love-screen" style="
 position:fixed;
 top:0;
 left:0;
@@ -740,22 +724,34 @@ background:linear-gradient(135deg,#ff4d6d,#ff8fa3);
 display:none;
 justify-content:center;
 align-items:center;
-z-index:200;
-}
+z-index:100;
+font-family:'Dancing Script',cursive;
+">
+    <h1 style="
+    color:white;
+    font-size:4rem;
+    text-align:center;
+    animation:fadeLove 1.5s ease forwards;
+    ">
+        I Love You ❤️
+    </h1>
+</div>
 
-#love-screen h1{
-color:white;
-font-size:4rem;
-font-family:'Dancing Script';
-animation:fadeLove 1.5s ease forwards;
-}
-
+<style>
 @keyframes fadeLove{
-from{opacity:0;transform:scale(.7);}
+from{opacity:0;transform:scale(0.7);}
 to{opacity:1;transform:scale(1);}
 }
+</style>
 
-.next-btn{
+<script>
+function showLove(){
+    document.getElementById('letter-view').classList.remove('active');
+    document.getElementById('love-screen').style.display='flex';
+}
+</script>
+<div class="love-letter">
+<button onclick="showLove()" style="
 margin-top:2rem;
 padding:12px 30px;
 border:none;
@@ -764,58 +760,8 @@ font-size:1.3rem;
 background:#ff4d6d;
 color:white;
 cursor:pointer;
-}
-</style>
-</head>
-
-<body>
-
-<!-- Letter View -->
-<div id="letter-view" style="
-position:fixed;
-top:0;
-left:0;
-width:100%;
-height:100%;
-background:rgba(0,0,0,0.6);
-display:flex;
-justify-content:center;
-align-items:center;
+box-shadow:0 6px 15px rgba(0,0,0,0.2);
 ">
-
-<div class="love-letter" style="
-background:#fff;
-width:90%;
-max-width:600px;
-padding:3rem;
-border-radius:5px;
-">
-
-<h2>My Dearest Valentine,</h2>
-<p>Just like you found these hidden hearts, you've found the deepest parts of my soul.</p>
-<p>Every moment with you is a surprise I cherish, a gift I never want to stop opening.</p>
-<p>Thank you for being my adventure, my comfort, and my love.</p>
-<p>Happy Valentine's Day! ❤️</p>
-<p style="text-align: right;">- Yours forever</p>
-
-<button class="next-btn" onclick="showLove()">Next ❤️</button>
-
-</div>
-</div>
-
-<!-- Final Love Screen -->
-<div id="love-screen">
-<h1>I Love You ❤️</h1>
-</div>
-
-<script>
-function showLove(){
-document.getElementById('letter-view').style.display='none';
-document.getElementById('love-screen').style.display='flex';
-}
-</script>
-
-</body>
-</html>
-
+Next ❤️
+</button>
 
