--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ to{opacity:1;transform:scale(1);}
 
 <!-- LOVE SCREEN -->
 <div id="love-screen">
-<h1>I Love You ❤️</h1>
+<h1>I Love You Shuttumani❤️</h1>
 </div>
 
 <script>
@@ -293,3 +293,4 @@ document.getElementById('love-screen').style.display='flex';
 
 </body>
 </html>
+
